+ Added: [Suggestion] Being able to disallow teleportation to furnaces: https://github.com/Angeschossen/FasterFurnaces/wiki/Permissions#teleportation